--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./:/var/www/html
     environment:
       XDEBUG_CONFIG: remote_host=host.docker.internal
+    command: bash -c "chmod -R 777 ./*"
   db:
     container_name: newsweek-db
     image: mysql:latest
